--- a/inference_code.ipynb
+++ b/inference_code.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "id": "0ae0fdf9-3226-4d28-87f0-f1ae7437b5ef",
    "metadata": {
     "tags": []
@@ -24,6 +24,8 @@
     "import time\n",
     "import os, glob\n",
     "import numpy as np\n",
+    "import io\n",
+    "import base64\n",
     "from PIL import Image\n",
     "import torch\n",
     "import torchvision.models as models\n",
@@ -32,8 +34,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "9a37fd72-d96d-400a-a858-6f46ace266fa",
+   "execution_count": 22,
+   "id": "d001c34d-4121-46d3-acf0-ed0bfc504147",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# Base64 인코딩 함수\n",
+    "def imageToString(img):\n",
+    "    img_byte_arr = io.BytesIO()\n",
+    "    img.save(img_byte_arr, format='PNG')\n",
+    "    my_encoded_img = base64.encodebytes(img_byte_arr.getvalue()).decode('ascii')\n",
+    "    return my_encoded_img\n",
+    "\n",
+    "# Base64 디코딩 및 이미지 변환 함수\n",
+    "def stringToImage(base64_string, mode='RGBA'):\n",
+    "    imgdata = base64.b64decode(str(base64_string))\n",
+    "    img = Image.open(io.BytesIO(imgdata)).convert(mode)\n",
+    "    return img\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "8a82b263-e815-4e90-b350-6e3e7f56b093",
    "metadata": {
     "tags": []
    },
@@ -51,18 +76,8 @@
     "        k2 = k.replace('module.', '') if k.startswith('module.') else k\n",
     "        temp[k2] = checkpoint[k]\n",
     "\n",
-    "    net.load_state_dict(temp, strict=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "bfae7a3a-1114-4e88-a0b9-b4b4f0238835",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
+    "    net.load_state_dict(temp, strict=True)\n",
+    "\n",
     "def run_prediction(model, input_list):\n",
     "    pred_result = []\n",
     "    total_proc_time = 0.0\n",
@@ -101,21 +116,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "id": "8706fc29-0a3a-4b05-ab6a-813a7b1178ed",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/conda/lib/python3.8/site-packages/torchvision/transforms/transforms.py:332: UserWarning: Argument interpolation should be of type InterpolationMode instead of int. Please, use InterpolationMode enum.\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 전처리 파이프라인\n",
     "input_size = 224\n",
@@ -133,8 +139,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "2f93711d-e6a4-4901-a1de-8aa61d623709",
+   "execution_count": 27,
+   "id": "88ce1087-65a4-4351-b3b2-e481120407ea",
    "metadata": {
     "tags": []
    },
@@ -148,12 +154,14 @@
     }
    ],
    "source": [
+    "# 모델 로딩 - 필수 파라미터\n",
     "use_gpu = False\n",
     "num_classes = 2\n",
     "model_name = 'efficientnet_lite0'\n",
     "device = torch.device(\"cuda\") if use_gpu else torch.device(\"cpu\")\n",
     "\n",
     "\n",
+    "# 모델 로딩\n",
     "ckpt_path = f\"./models/b64_lr5e-3_lite0/checkpoint-010000.pth.tar\"\n",
     "ckpt_selected = torch.load(ckpt_path, map_location=None if use_gpu else 'cpu')\n",
     "model = build_efficientnet_lite(model_name, num_classes)\n",
@@ -165,8 +173,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "e1594e44-9a95-453f-af34-2994bd521ad5",
+   "execution_count": 28,
+   "id": "e1672c11-af35-4614-8536-2ba41c03bc0b",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# 이미지 불러오기\n",
+    "image = Image.open('../data/hair_verifying_all/positive/Female_O_L100.jpeg').convert('RGB')\n",
+    "\n",
+    "img_base64 = imageToString(image)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "be3ec2e4-3863-49be-be8d-5b18945f2ea4",
    "metadata": {
     "tags": []
    },
@@ -175,16 +198,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Predicted: 1 | Time:  0.025983095169067383 [-4.4621453  4.449293 ] 1\n"
+      "Predicted: 1 | Time:  0.1043405532836914 [-4.4621453  4.449293 ] 1\n"
      ]
     }
    ],
    "source": [
-    "# 이미지 불러오기\n",
-    "image = Image.open('../data/hair_verifying_all/positive/Female_O_L100.jpeg').convert('RGB')\n",
+    "# input이 base64라고 가정하고..\n",
+    "img_input = stringToImage(img_base64).convert(\"RGB\")\n",
     "\n",
     "# 전처리 수행\n",
-    "input_tensor = preprocess(image)\n",
+    "input_tensor = preprocess(img_input)\n",
     "input_batch = input_tensor.unsqueeze(0)  # batch size = 1\n",
     "\n",
     "s_time = time.time()\n",
@@ -196,22 +219,6 @@
     "r_time = time.time() - s_time\n",
     "print('Predicted:', predicted.item(), '|', 'Time: ', r_time, output.numpy()[0], predicted.numpy()[0])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e1672c11-af35-4614-8536-2ba41c03bc0b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "be3ec2e4-3863-49be-be8d-5b18945f2ea4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
